2007-01-19  Sergii Stoian <stoyan255@gmail.com>

	* Source/GSTheme.m (-drawButton:view:style:state:): Call 
	[drawButton:withClip:] instead of [drawGreyBezel:withClip:] if
	state is highlighted (e.g. scroller buttons).

2007-01-19  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPopUpButton.m (-keyDown:): Handle selection of first
	entry correctly. Patch by Phillipe Roussel <p.o.roussel@free.fr>

2007-01-19  Richard Frith-Macdoanld <rfm@gnu.org>

	* Source/NSDocument.m: fix include path (bug #18829)

2007-01-18  Adam Fedor  <fedor@gnu.org>

	* Source/NSBitmapImageRep+PNM.m ([NSBitmapImageRep
	-_initBitmapFromPNM:errorMessage:]): Check for invalid image size. 

2007-01-18  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSCell.m (-setFloatingPointFormat:left:right:): Basic
	implementation.
	* Source/NSCell.m (-setUpFieldEditorAttributes:,
	_setupTextWithFrame:inView:editor:delegate:range:, endEditing:, 
	editWithFrame:...event:, selectWithFrame:...length:): Changed to
	handle more text attributes and non-scrolling text. 
	* Source/NSCell.m (-setScrollable:): If switched on, switch wraps off.
	* Headers/AppKit/NSCell.h: Corrected version number for some methods.

	* Headers/AppKit/NSControl.h: Add MacOS 10.4 methods.
	* Source/NSControl.m: Implement new MacOS 10.4 methods.
	* Source/NSControl.m (-mouseDown): Once more removed action mask
	fiddling. This time there is protection that the control itself
	does not go away.
	* Source/NSControl.m (-textDidBeginEditing:, -textDidChange:,
	-textDidEndEditing:): Extracted code to be shared between subclasses.
	* Source/NSTextField.m,
	* Source/NSTableView.m,
	* Source/NSMatrix.m (-textDidBeginEditing:, -textDidChange:,
	-textDidEndEditing:): Call shared super code.
	
2007-01-17  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSResponder.h: Add MacOS 10.4 methods.
	* Source/NSResponder.m: Implement new MacOS 10.4 methods.
	* Headers/AppKit/NSDocumentFrameworkPrivate.h: Remove.
	* Source/NSDocumentFrameworkPrivate.h: Add.